# 30daysPythonRepo

./: .breakpoints  .replit  README.md  books.json  day01.txt  day02.py  day03.py  day03_proj.py  day06_proj.py  day08.py  day1.py  day12.py  day12_proj.py  day14_proj_hard.py  day16.py  day18_proj.py  day19.py  day2.txt  day4.txt  day5.py  day5.txt  day6.py  day7.py  day7_proj.py  day8.py  day9.py  klog.txt  pyproject.toml
day01-03/: day03.txt
day04-06/: day04.py
day07-11/: day09_proj.py  day10.py  day11.py
day12-14/: books.csv  books2.csv  day13.py  day14.py  day14_proj.py
day15-17/: day15.py  day17.py
day18-20/: day18.py  day20.py
day21/: day21.txt  day21_main.py  helper_functions.py  menu_functions.py
day21_proj/: charts.py  data_storage.py  day21_proj.txt  handle_chart.py  main.py
day22-24/day22/: day22.py  day22.txt
day22-24/day23/: day23.py  day23.txt
day22-24/day24/: day24.py  day24.txt  day24_proj.py  log.txt  roll_log.txt  roll_log_orig.txt
day25-26/: day25.py  day26.py
day27-29/: app.py
day27-29/day27/: avocado.csv  day27_proj.py
day27-29/day28/: books.csv  day28.py  day28_proj.py  day28_proj_tutorial.py
day27-29/day29/: day29.py
day30/: learnpygame.py  learnpygame2.py
day30/project_snek/: colors.py  main.py
