[tool.poetry]
name = "repl_python3_30daysPythonRepo"
version = "0.1.0"
description = ""
authors = ["AnnMEldo31 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
strings-pkg = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
